# CurVis

./: Cargo.toml  README.md
paths/: generate_path_orbit.py  generate_path_through.py  path_orbit.csv  path_through.csv
settings/defaults/: camera_settings.toml  ellis_metric_settings.toml  image_settings.toml  interstellar_metric_settings.toml  simulation_settings.toml  video_settings.toml
src/: algebra.rs  cameras.rs  cli.rs  csv.rs  custom.rs  filepaths.rs  images.rs  interpolation.rs  lib.rs  main.rs  metrics.rs  rendering.rs  sampling.rs  settings.rs  systems.rs  vectors.rs
utils/: video_merge.py
