[package]
name = "curvis"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
nalgebra = "0.33.0"
duplicate = "1.0.0"
rand = "0.8.5"
approx = "0.5.1"
interp = "1.0.3"
serde = {version = "1.0.210", features = ["derive"]}
toml = "0.8.19"
clap = {version = "4.5.20", features = ["cargo"]}
either = "1.13.0"
